# geadm

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude/agents/: discoveryengine-lister.md  ge-api-researcher.md  logging-inspector.md  monitoring-stats.md  readonly-auditor.md
.claude/skills/ge-api-drift/: SKILL.md
.github/workflows/: release.yml  test.yml
geadm/: __init__.py  auth.py  main.py  render.py
geadm/commands/: __init__.py  armor.py  doctor.py  logs.py  ls.py  stats.py
getop/: __init__.py  render.py
getop/commands/: ls.py
tests/: conftest.py  test_armor.py  test_cli.py  test_doctor.py  test_duration.py  test_logs.py  test_ls.py  test_readonly.py  test_render.py  test_stats.py
