[project]
name = "geadm"
version = "0.1.0"
description = "Read-only troubleshooting, debug and stats CLI for Google Gemini Enterprise (Discovery Engine / Agentspace)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "google-cloud-discoveryengine>=0.13",
    "google-cloud-logging>=3.10",
    "google-cloud-monitoring>=2.21",
]

[project.scripts]
geadm = "geadm.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geadm"]
